[project]
name = "deep-q-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "arguably>=1.3.0",
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[accept-rom-license,atari,other]>=1.2.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
]
